--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ dj-database-url==2.3.0
 Django==5.2.1
 django-cors-headers==4.7.0
 djangorestframework==3.16.0
+gunicorn==23.0.0
+packaging==25.0
 pillow==11.2.1
 psycopg2-binary==2.9.10
 sqlparse==0.5.3
