--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ dj-database-url==2.3.0
 Django==5.2.1
 django-cloudinary-storage==0.3.0
 django-cors-headers==4.7.0
+django-jet-reboot==1.3.10
 djangorestframework==3.16.0
 gunicorn==23.0.0
 idna==3.10
